test/error/ast/ImportModuleNotFound.mod
MODULE ImportModuleNotFound;
IMPORT NoSuchModule;
END ImportModuleNotFound.
